chore: update project name to 'Decentralised Storage Area Networks' and add comprehensive project documentation.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "san-backend",
+  "name": "decentralised-storage-area-networks-backend",
   "version": "1.0.0",
-  "description": "Backend for Decentralized Cloud Storage",
+  "description": "Backend for Decentralised Storage Area Networks",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
