--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "san-frontend",
+    "name": "decentralised-storage-area-networks-frontend",
     "private": true,
     "version": "0.0.0",
     "type": "module",
